.provarCaches/00D5f000005vwGkEAI/objects/rstk__woscheduling__c.object
<CustomObject>
    <description>woscheduling__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woscheduling_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Applicable DIvision</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>divwoschedulings</relationshipLabel>
        <relationshipName>divwoschedulings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__woscheduling_runoption__c</fullName>
        <inlineHelpText>Work Orders can be Scheduled, and Operations can also be extracted.</inlineHelpText>
        <label>Run Option</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__woscheduling_wolist__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WO List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>WO Scheduling</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WO Scheduling</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>